syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.message";
option java_outer_classname = "MessageDataProto";
option objc_class_prefix = "HLW";
 
package Nanomite.Core.Network.Grpc;

message FetchRequest {
	/// <summary>
	/// The descriptor describes the specific type url of the proto.
	/// Each any proto that is wrapping another proto message has TypeUrl proto,
    /// which describes the type of the containing proto message.
	/// With this property the host can identify the database table (model) that is requested.﻿
	/// </summary>  
    string TypeDescription = 1;

	/// <summary>
	/// (Optional) A serialized query that is used to filter the result.
    /// Currently only for serialized c# linq expression. 
	/// Later we will provide a sql query interface.
	/// </summary>  
    string Query = 2;

	/// <summary>
	/// (Optional) Used to include all child entities of the specific type that is requested.
	/// E.g. to include all related child parts on a product.
	/// </summary>  
    bool InlcudeRelatedEntities = 3;
}
